# datachat-community

./: .community-export-ignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  TESTING.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  smoke_testing.md
.github/: pull_request_template.md
.github/workflows/: python-app.yml
backend/: .dockerignore  Dockerfile  cli.py  config.py  settings_store.py
backend/agents/: __init__.py  base.py  context.py  context_answer.py  executor.py  query_analyzer.py  query_compiler.py  response_synthesis.py  sql.py  tool_planner.py  validator.py
backend/api/: database_context.py  main.py  visualization.py  websocket.py  (+1 more)
config/: phase1_kpi.json  tools.yaml
docs/: API.md  ARCHITECTURE.md  CAPABILITY_CONTRACT.md  CLI_QUICKSTART.md  COMMUNITY_EXPORT_MANIFEST.md  COMMUNITY_V0_1_SCOPE_LOCK.md  CREDENTIALS_ONLY_MODE.md  DATAPOINT_CONTRACTS.md  DATAPOINT_EXAMPLES_TESTING.md  DATAPOINT_MIGRATION.md  DATAPOINT_SCHEMA.md  DEMO_PLAYBOOK.md  DOMAIN_QUESTION_BANK.md  FEATURE_MATRIX.md  FRONTEND_PRD.md  HANDY_RESET_COMMANDS.md  LATENCY_TUNING.md  LAUNCH_CHECKLIST.md  MANUAL_EVAL_SCORECARD.md  METADATAOPS_FOUNDATION.md  MULTI_DATABASE.md  OPERATIONS.md  PHASE14_SIMPLE_ENTRY_LAYER.md  PHASE1_KPI_GATES.md  PLAYBOOK.md  PROMPTS.md  QUERY_COMPILER_RUNTIME.md  RAG_EVAL.md  README.md  ROADMAP.md  ROUTING_POLICY.md  SESSION_MEMORY.md  SPRINT_NEXT_FOCUS_CHECKLIST.md  SQL_ROUTING_DECISION_TREE.md  UI_HOWTO.md  UNIFIED_ROUTING_ARCHITECTURE.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
prompts/: PROMPTS.md  README.md
scripts/: README.md  benchmark_latency_progressive.py  demo_seed.sql  eval_runner.py  export_to_community.sh  finance_workflow_gate.py  fintech_demo_queries.sql  fintech_seed.sql  grocery_seed.sql  lint_datapoints.py  manual_eval_runner.py  phase1_kpi_gate.py  sql_agent_demo.py  test_sql_agent.py  trace_query_flow.py
tests/: conftest.py
(+262 files in other folders)
