[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datachat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.42.0",
    "asyncpg>=0.31.0",
    "chromadb>=1.4.0",
    "click>=8.1.0",
    "clickhouse-connect>=0.7.0",
    "cryptography>=43.0.0",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "networkx>=3.6.1",
    "mysql-connector-python>=9.5.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.2.1",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.45",
    "sqlparse>=0.5.0",
    "tiktoken>=0.8.0",
    "uvicorn>=0.40.0",
    "watchdog>=4.0.0",
]

[project.scripts]
datachat = "backend.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "tests"]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["tests*", "frontend*", "datapoints*"]
